@@ -112,6 +112,6 @@ No. Continuous Dependent Vars.: 1
 [1] 1
 > 
 > cat("Elapsed time =", t[3], "\n")
-Elapsed time = 103.779 
+Elapsed time = 104.273 
 > 
 > mpi.quit()
