@@ -119,6 +119,6 @@ No. Continuous Explanatory Vars.: 1
 [1] 1
 > 
 > cat("Elapsed time =", t[3], "\n")
-Elapsed time = 25.535 
+Elapsed time = 25.8 
 > 
 > mpi.quit()
