@@ -105,6 +105,6 @@ No. Continuous Explanatory Vars.: 1
 [1] 1
 > 
 > cat("Elapsed time =", t[3], "\n")
-Elapsed time = 29.352 
+Elapsed time = 29.692 
 > 
 > mpi.quit()
