@@ -94,6 +94,6 @@ Null of independence is rejected at lag 2 at the 0.1% level
 [1] 1
 > 
 > cat("Elapsed time =", t[3], "\n")
-Elapsed time = 140.769 
+Elapsed time = 144.05 
 > 
 > mpi.quit()
