@@ -90,6 +90,6 @@ Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 [1] 1
 > 
 > cat("Elapsed time =", t[3], "\n")
-Elapsed time = 82.004 
+Elapsed time = 86.972 
 > 
 > mpi.quit()
