@@ -79,6 +79,6 @@ No. Continuous Vars.: 1
 [1] 1
 > 
 > cat("Elapsed time =", t[3], "\n")
-Elapsed time = 13.775 
+Elapsed time = 17.629 
 > 
 > mpi.quit()
