@@ -57,8 +57,8 @@ Null of independence is rejected at the 0.1% level
 
 > 
 > cat("Elapsed time =", t[3], "\n")
-Elapsed time = 65.548 
+Elapsed time = 65.683 
 > 
 > proc.time()
    user  system elapsed 
- 65.960   0.056  66.016 
+ 66.011   0.063  66.151 
