@@ -93,9 +93,9 @@ No. Continuous Explanatory Vars.: 1
 
 > 
 > cat("Elapsed time =", t[3], "\n")
-Elapsed time = 47.766 
+Elapsed time = 47.847 
 > 
 > 
 > proc.time()
    user  system elapsed 
- 48.079   0.064  48.255 
+ 48.132   0.097  48.346 
