@@ -50,13 +50,13 @@ Regression Type: Local-Linear
 Bandwidth Selection Method: Expected Kullback-Leibler Cross-Validation
 Formula: lwage ~ female + married + educ + exper + tenure
 Bandwidth Type: Fixed
-Objective Function Value: -0.8569568 (achieved on multistart 2)
+Objective Function Value: -0.8570274 (achieved on multistart 5)
 
-Exp. Var. Name: female  Bandwidth: 0.02068364   Lambda Max: 0.5     
-Exp. Var. Name: married Bandwidth: 0.1339584    Lambda Max: 0.5     
-Exp. Var. Name: educ    Bandwidth: 7.959603   Scale Factor: 13.13951
-Exp. Var. Name: exper   Bandwidth: 8.510967   Scale Factor: 1.534766
-Exp. Var. Name: tenure  Bandwidth: 45.84498   Scale Factor: 21.62277
+Exp. Var. Name: female  Bandwidth: 0.01988320   Lambda Max: 0.5     
+Exp. Var. Name: married Bandwidth: 0.1501293    Lambda Max: 0.5     
+Exp. Var. Name: educ    Bandwidth: 7.859911   Scale Factor: 12.97494
+Exp. Var. Name: exper   Bandwidth: 8.443829   Scale Factor: 1.522659
+Exp. Var. Name: tenure  Bandwidth: 42.0345    Scale Factor: 19.82556
 
 Continuous Kernel Type: Second-Order Gaussian
 No. Continuous Explanatory Vars.: 3
@@ -70,13 +70,13 @@ No. Unordered Categorical Explanatory Vars.: 2
 > summary(model)
 
 Regression Data: 526 training points, in 5 variable(s)
-                  female   married     educ    exper   tenure
-Bandwidth(s): 0.02068364 0.1339584 7.959603 8.510967 45.84498
+                  female   married     educ    exper  tenure
+Bandwidth(s): 0.01988320 0.1501293 7.859911 8.443829 42.0345
 
 Kernel Regression Estimator: Local-Linear
 Bandwidth Type: Fixed
-Residual standard error: 0.1370057
-R-squared: 0.5153225
+Residual standard error: 0.1371342
+R-squared: 0.514879
 
 Continuous Kernel Type: Second-Order Gaussian
 No. Continuous Explanatory Vars.: 3
@@ -86,9 +86,9 @@ No. Unordered Categorical Explanatory Vars.: 2
 
 > 
 > cat("Elapsed time =", t[3], "\n")
-Elapsed time = 370.894 
+Elapsed time = 221.737 
 > 
 > 
 > proc.time()
    user  system elapsed 
-370.356   0.327 371.422 
+220.549   0.238 222.276 
