@@ -71,8 +71,8 @@ Null of independence is rejected at lag 2 at the 0.1% level
 
 > 
 > cat("Elapsed time =", t[3], "\n")
-Elapsed time = 239.765 
+Elapsed time = 240.626 
 > 
 > proc.time()
    user  system elapsed 
-240.108   0.096 240.517 
+240.268   0.169 241.097 
