@@ -52,7 +52,7 @@ Explanatory variables tested for significance:
 z (1), x1 (2), x2 (3)
 
                       z       x1        x2
-Bandwidth(s): 0.2116178 6.166081 0.9550354
+Bandwidth(s): 0.2116178 6.166078 0.9550357
 
 Significance Tests
 P Value: 
@@ -64,8 +64,8 @@ Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 
 > 
 > cat("Elapsed time =", t[3], "\n")
-Elapsed time = 145.487 
+Elapsed time = 135.891 
 > 
 > proc.time()
    user  system elapsed 
-145.889   0.088 145.977 
+135.812   0.098 136.419 
