@@ -1,18 +1,18 @@
-n: np=1: 109.1, np=2: 117.6, ratio=0.93
-n: np=1: 29.4, np=2: 46.5, ratio=0.63
-n: np=1: 327.5, np=2: 560.2, ratio=0.58
-n: np=1: 36.9, np=2: 86.5, ratio=0.43
-n: np=1: 23.6, np=2: 41.4, ratio=0.57
-n: np=1: 37.3, np=2: 66.2, ratio=0.56
-n: np=1: 19.4, np=2: 34.8, ratio=0.56
-n: np=1: 26.6, np=2: 47.7, ratio=0.56
-n: np=1: 53.5, np=2: 93.4, ratio=0.57
-n: np=1: 140.1, np=2: 220.2, ratio=0.64
-n: np=1: 227.9, np=2: 219.6, ratio=1.04
-n: np=1: 32.7, np=2: 36.4, ratio=0.90
-n: np=1: 149.5, np=2: 240.0, ratio=0.62
-n: np=1: 85.4, np=2: 134.1, ratio=0.64
-n: np=1: 28.9, np=2: 41.1, ratio=0.70
-n: np=1: 29.4, np=2: 58.2, ratio=0.51
-n: np=1: 14.0, np=2: 24.1, ratio=0.58
-n: np=1: 27.5, np=2: 40.1, ratio=0.69
+n: np=1: 104.3, np=2: 119.2, ratio=0.87
+n: np=1: 27.8, np=2: 47.2, ratio=0.59
+n: np=1: 318.5, np=2: 568.2, ratio=0.56
+n: np=1: 43.4, np=2: 86.4, ratio=0.50
+n: np=1: 25.5, np=2: 41.1, ratio=0.62
+n: np=1: 36.3, np=2: 65.7, ratio=0.55
+n: np=1: 18.9, np=2: 35.0, ratio=0.54
+n: np=1: 25.8, np=2: 47.8, ratio=0.54
+n: np=1: 50.6, np=2: 92.8, ratio=0.55
+n: np=1: 131.7, np=2: 220.7, ratio=0.60
+n: np=1: 229.0, np=2: 221.7, ratio=1.03
+n: np=1: 29.7, np=2: 36.7, ratio=0.81
+n: np=1: 144.1, np=2: 240.6, ratio=0.60
+n: np=1: 87.0, np=2: 135.9, ratio=0.64
+n: np=1: 32.7, np=2: 41.0, ratio=0.80
+n: np=1: 28.6, np=2: 57.9, ratio=0.49
+n: np=1: 17.6, np=2: 24.1, ratio=0.73
+n: np=1: 27.5, np=2: 39.9, ratio=0.69
