@@ -1,23 +1,23 @@
 \begin{tabular}{lrrr}
 Function & Secs(1) & Secs(2) & Ratio\cr
 \hline
-n & 109.1 & 117.6 & 0.93\cr
-n & 29.4 & 46.5 & 0.63\cr
-n & 327.5 & 560.2 & 0.58\cr
-n & 36.9 & 86.5 & 0.43\cr
-n & 23.6 & 41.4 & 0.57\cr
-n & 37.3 & 66.2 & 0.56\cr
-n & 19.4 & 34.8 & 0.56\cr
-n & 26.6 & 47.7 & 0.56\cr
-n & 53.5 & 93.4 & 0.57\cr
-n & 140.1 & 220.2 & 0.64\cr
-n & 227.9 & 219.6 & 1.04\cr
-n & 32.7 & 36.4 & 0.90\cr
-n & 149.5 & 240.0 & 0.62\cr
-n & 85.4 & 134.1 & 0.64\cr
-n & 28.9 & 41.1 & 0.70\cr
-n & 29.4 & 58.2 & 0.51\cr
-n & 14.0 & 24.1 & 0.58\cr
-n & 27.5 & 40.1 & 0.69\cr
+n & 104.3 & 119.2 & 0.87\cr
+n & 27.8 & 47.2 & 0.59\cr
+n & 318.5 & 568.2 & 0.56\cr
+n & 43.4 & 86.4 & 0.50\cr
+n & 25.5 & 41.1 & 0.62\cr
+n & 36.3 & 65.7 & 0.55\cr
+n & 18.9 & 35.0 & 0.54\cr
+n & 25.8 & 47.8 & 0.54\cr
+n & 50.6 & 92.8 & 0.55\cr
+n & 131.7 & 220.7 & 0.60\cr
+n & 229.0 & 221.7 & 1.03\cr
+n & 29.7 & 36.7 & 0.81\cr
+n & 144.1 & 240.6 & 0.60\cr
+n & 87.0 & 135.9 & 0.64\cr
+n & 32.7 & 41.0 & 0.80\cr
+n & 28.6 & 57.9 & 0.49\cr
+n & 17.6 & 24.1 & 0.73\cr
+n & 27.5 & 39.9 & 0.69\cr
 \hline
 \end{tabular}
